test/expected/explain_f__v-c++03.out
explain auto f() -> void
                 ^
18: error: trailing return type is not supported until C++11
